--- a/pcss2.html
+++ b/pcss2.html
@@ -72,7 +72,7 @@
 
         }
 
-    .b h1{color:orangered;
+    .a h1{color:orangered;
       font-size:30px;
       text-align: center;
       margin-top: 10px;}
@@ -123,7 +123,7 @@
  </div>
     <!-- /background end -->
     
-    <div class="b">
+    <div class="a">
         <h1>Add New List</h1>
 <label for="box"></label>
 <input type="text" id="box" value="" name="item"><br>
